--- a/wiki/Peticiones.wiki
+++ b/wiki/Peticiones.wiki
@@ -1,5 +1,10 @@
-#summary One-sentence summary of this page.
+#summary Reporte de problemas, sugerencias y dudas
 
 = Peticiones =
 
 Sistema de gestión de peticiones del software de Puerto Argentino
+
+= ¿Qué es y cómo funciona? =
+
+Este sistema permite registrar los problemas que surgen, colocar sugerencias para incorporar nueva funcionalidad al sistema, y realizar preguntas sobre dudas que puedan existir.
+Los usuarios deberán simplemente cargar nuevas peticiones a medida que surgen, tratando de completar tanto como sea posible y ser lo más claros posible. Luego, los desarrolladores evaluarán cada caso, y de ser necesario se pondrán en contacto con quien realizó la petición.
